--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^2.3.0"
     }
 }
