--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/material": "^7.1.0",
         "datatables.net-dt": "^2.3.0"
     }
 }
