--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@mui/material": "^7.1.0",
-        "datatables.net-dt": "^2.3.0"
+        "datatables.net-dt": "^2.3.0",
+        "select2": "~4.0"
     }
 }
